--- a/custom_components/irrigation_addon/manifest.json
+++ b/custom_components/irrigation_addon/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "irrigation_addon",
   "name": "Irrigation Addon",
-  "codeowners": ["@irrigation-addon"],
+  "codeowners": ["@mediflowernz"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/irrigation-addon/ha-irrigation-addon",
+  "documentation": "https://github.com/mediflowernz/ha-irrigation-addon",
   "homekit": {},
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/irrigation-addon/ha-irrigation-addon/issues",
+  "issue_tracker": "https://github.com/mediflowernz/ha-irrigation-addon/issues",
   "requirements": ["croniter>=1.3.0"],
   "ssdp": [],
   "version": "1.0.0",
